# Baerbot

./: .gitignore  Cargo.toml  README.md  eslint.config.js  justfile  package.json  svelte.config.js  tailwind.config.ts
.github/workflows/: build-win.yml  build.yml
.github/workflows_bak/: build-win.yml  build.yml
background/: Cargo.toml
background/src/: auth.rs  chat.rs  main.rs  tts.rs
service/: Cargo.toml
service/src/: auth.rs  chat.rs  lib.rs  main.rs  tts.rs
shared/: Cargo.toml
shared/src/: data.rs  lib.rs
shared/src/cfg/: cli.rs  file.rs  mod.rs
src/: app.css  app.html  auth.rs  bindings.ts  chat.rs  cli.rs  counter.rs  lib.rs  main.rs  tts.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: index.html
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: config.rs  dirs.rs  error.rs  lib.rs  logs.rs  main.rs  obs.rs  os_color.rs  statics.rs  tauri.rs  tts.rs  twitch.rs  utils.rs
src-tauri/src/obs/: overlay.rs  websocket.rs
src-tauri/src/service/: auth.rs  chat.rs  counter.rs  mod.rs  tray.rs  tts.rs
src-tauri/src/shared/: data.rs  mod.rs
src-tauri/src/shared/cfg/: cli.rs  file.rs  mod.rs
src-tauri/src/tts/: piper.rs  piper_convert.py  system.rs
src-tauri/src/twitch/: actions.rs  auth.rs  chat.rs  counter.rs  events.rs  redeems.rs  users.rs
src-tauri/src/ui/: mod.rs  tray.rs
src/lib/: actions.ts  bindings.ts  store.svelte.ts  utils.ts
src/lib/components/: action_add.svelte  app_sidebar.svelte  bot_actions.svelte  chat.svelte  debug_overlay.svelte  exec_select.svelte  hamster.svelte  logs.svelte  obs.svelte  theme_toggle.svelte  trigger_select.svelte  tts_settings.svelte  twitch.svelte
src/lib/components/AppSidebar/: sidebar-content.svelte
src/lib/components/exec_detailed/: exec_counter.svelte  exec_random.svelte  exec_timeout.svelte  exec_user.svelte  exec_utils.ts  exec_wip.svelte  text_input.svelte
src/lib/components/ui/accordion/: accordion-trigger.svelte
src/lib/components/ui/breadcrumb/: breadcrumb-ellipsis.svelte  breadcrumb-separator.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-overlay.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/select/: select-trigger.svelte
src/lib/components/ui/sheet/: sheet-content.svelte  sheet-overlay.svelte
src/lib/components/ui/sidebar/: context.svelte.ts  sidebar-input.svelte  sidebar-menu-button.svelte  sidebar-provider.svelte  sidebar-rail.svelte  sidebar-trigger.svelte  sidebar.svelte
src/lib/components/ui/textarea/: textarea.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/bot/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
src/styles/: config.css
tedbot-ui/: .gitignore  components.json  eslint.config.js  package.json  svelte.config.js  tailwind.config.ts
tedbot-ui/src/: app.css  store.svelte.ts
tedbot-ui/src-tauri/: Cargo.toml  tauri.conf.json
tedbot-ui/src-tauri/src/: lib.rs  main.rs
tedbot-ui/src/lib/components/: sidebar.svelte
tedbot-ui/src/lib/components/AppSidebar/: app-sidebar.svelte  sidebar-content.svelte  sidebar-footer.svelte  sidebar-header.svelte  sidebar-page.svelte
tedbot-ui/src/lib/components/ui/collapsible/: CollapsibleContent.svelte  index.ts
tedbot-ui/src/lib/components/ui/dialog/: dialog-overlay.svelte
tedbot-ui/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-trigger.svelte
tedbot-ui/src/lib/components/ui/sidebar/: sidebar-menu-skeleton.svelte  sidebar-provider.svelte  sidebar-separator.svelte  sidebar-trigger.svelte
tedbot-ui/src/routes/: +layout.svelte  +page.svelte
tedbot-ui/src/styles/: plugins.css
