[package]
name = "tedbot"
version = "0.1.0"
edition = "2024"

[dependencies]
twitch_api = { version = "0.7.0", features = [
    "twitch_oauth2",
    "client",
    "helix",
    "eventsub",
    "hmac",
    "reqwest",
] }
twitch_oauth2 = { version = "0.15.1", features = ["client"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.1", features = ["url"] }
reqwest = { version = "0.12.15" }
eyre = { version = "0.6.12", default-features = false, features = [
    "auto-install",
    "track-caller",
] }
futures = "0.3.31"
color-eyre = "0.6.3"
twitch-irc = { version = "5.0.1", features = [
    "transport-ws-native-tls",
    "refreshing-token-native-tls",
] }
tracing-error = "0.2.1"
chrono = "0.4.39"
open = "5.3.2"
keyring-lib = { version = "1.0.2", default-features = false, features = [
    "tokio",
    "derive",
    "openssl",
] }
secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
lazy_static = "1.5.0"
piper-rs = "0.1.9"
rodio = { version = "0.20.1", features = ["tracing"] }
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
shared = { path = "../shared" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "unwind"
strip = true

[profile.dev.package.backtrace]
opt-level = 3
