[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_config = "0.1.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
eyre = { version = "0.6.12", default-features = false, features = [
    "auto-install",
    "track-caller",
] }
dirs = "6.0.0"
toml = "0.8.20"
