[package]
name = "baerbot"
version = "0.1.0"
description = "A Tauri App"
authors = ["Teddy-Kun"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "baerbot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.226", features = ["derive", "rc", "alloc"] }
serde_json = "1.0.145"
specta = "=2.0.0-rc.22"
specta-typescript = "=0.0.9"
clap = { version = "4.5.48", features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
clap_config = "0.1.1"
dirs = "6.0.0"
toml = "0.9.7"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
twitch_api = { version = "0.7.0", features = [
	"twitch_oauth2",
	"client",
	"helix",
	"eventsub",
	"hmac",
	"reqwest",
] }
twitch_oauth2 = { version = "0.15.1", features = ["client"] }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.23" }
twitch-irc = { version = "5.0.1", features = [
	"transport-ws-rustls-native-roots",
	"refreshing-token-rustls-native-roots",
] }
chrono = "0.4.39"
open = "5.3.2"
keyring-lib = { version = "1.0.2", features = ["derive"] }
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
rodio = { version = "0.21.1" }
tauri-plugin-log = "2.7.0"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
anyhow = "1.0.100"
colors-transform = "0.2.11"
futures = "0.3.31"
rand = "0.9.2"
indexmap = "2.11.4"
tracing-appender = "0.2.3"
regex = "1.11.3"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls", "tokio-native-tls"] }
dashmap = "6.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12.0", features = ["tokio"], default-features = false }


[target.'cfg(windows)'.dependencies]
hex = "0.4.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.0"
features = ["Win32", "Win32_Graphics", "Win32_Graphics_Dwm"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
# lto = "thin"
lto = true
strip = true
