[package]
name = "tedbot-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Teddy-Kun"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tedbot_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
specta = "=2.0.0-rc.22"
specta-typescript = "=0.0.9"
shared = { path = "../../shared" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 2
panic = "unwind"
strip = true
